# conway-life-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  justfile
src/: board.rs  main.rs
