[package]
name = "conway-life-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window'] }

